--- a/app/src/main/res/layout/fragment_qr_code_read.xml
+++ b/app/src/main/res/layout/fragment_qr_code_read.xml
@@ -14,6 +14,8 @@
         android:layout_marginTop="50dp"
         android:gravity="center"
         android:text="Leitura do QRCODE realizada."
+        android:fontFamily="@font/manrope_semibold"
+        android:textColor="@color/light_blue"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -24,10 +26,10 @@
         android:id="@+id/qrCodeImg"
         android:layout_width="300dp"
         android:layout_height="300dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="16dp"
         android:src="@drawable/qr"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtRead" />
 
@@ -36,8 +38,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Cliente:"
-        android:textSize="45sp"
+        android:text="@string/cliente"
+        android:textColor="@color/light_blue"
+        android:textSize="20sp"
+        android:fontFamily="@font/manrope_semibold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,8 +51,10 @@
         android:id="@+id/etName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Client name"
-        android:textSize="30sp"
+        android:text="@string/client_name"
+        android:textColor="@color/light_blue"
+        android:fontFamily="@font/manrope_semibold"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,8 +64,10 @@
         android:id="@+id/etEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Client Email"
-        android:textSize="30sp"
+        android:text="@string/client_email"
+        android:textColor="@color/light_blue"
+        android:fontFamily="@font/manrope_semibold"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -69,21 +77,20 @@
         android:id="@+id/btnRescan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="60dp"
         android:text="Reescanear"
-        android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btnConfirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         android:text="Avançar"
-        android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toTopOf="@+id/btnRescan"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
