--- a/app/src/main/res/layout/dialog_signout.xml
+++ b/app/src/main/res/layout/dialog_signout.xml
@@ -13,9 +13,11 @@
         android:layout_height="wrap_content"
         android:padding="20dp">
         <TextView
-            android:textStyle="bold"
-            android:textSize="40sp"
+            android:textColor="@color/blue_gray"
+            android:textSize="25sp"
             android:text="@string/sair_da_conta"
+            android:fontFamily="@font/manrope_semibold"
+
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
@@ -23,8 +25,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
+            android:fontFamily="@font/manrope_semibold"
+            android:textColor="@color/lighter_gray"
             android:textSize="15sp"
-            android:text="Tem certeza que deseja sair da sua conta atual?"/>
+            android:text="@string/aviso_signout"/>
         <LinearLayout
             android:gravity="center"
             android:layout_marginTop="20dp"
