--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -18,7 +18,9 @@
         android:layout_margin="40dp"
         android:gravity="center"
         android:text="Faça a leitura do QRCODE do cliente:"
-        android:textSize="35sp"
+        android:fontFamily="@font/manrope_extrabold"
+        android:textSize="30sp"
+        android:textColor="@color/blue_gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,7 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:src="@drawable/reticle"
+        android:src="@drawable/fotocliente"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
