--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -17,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="35dp"
-        android:text="Rotas"
+        android:text="@string/rotas"
         app:icon="@drawable/nav"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
