--- a/app/src/main/res/navigation/nav_manager.xml
+++ b/app/src/main/res/navigation/nav_manager.xml
@@ -44,8 +44,8 @@
             app:popUpToInclusive="true">
         </action>
         <action
-            android:id="@+id/action_cameraFragment_to_clientPhotoFragment"
-            app:destination="@id/clientPhotoFragment" />
+            android:id="@+id/action_cameraFragment_to_confirmLockerFragment"
+            app:destination="@id/confirmLockerFragment" />
 
 
     </fragment>
@@ -54,19 +54,24 @@
         android:name="com.puc.pi3_es_2024_t24.manager.ClientPhotoFragment"
         android:label="fragment_client_photo"
         tools:layout="@layout/fragment_client_photo" >
-        <argument
-            android:name="photoUri"
-            app:argType="string"
-            app:nullable="true"
-            android:defaultValue="null" />
-        <argument
-            android:name="photoUri1"
-            app:argType="string"
-            app:nullable="true"
-            android:defaultValue="null" />
         <action
             android:id="@+id/action_clientPhotoFragment_to_cameraFragment"
             app:destination="@id/cameraFragment" />
+
+    </fragment>
+    <fragment
+        android:id="@+id/confirmLockerFragment"
+        android:name="com.puc.pi3_es_2024_t24.manager.ConfirmLockerFragment"
+        android:label="fragment_confirm_locker"
+        tools:layout="@layout/fragment_confirm_locker">
+        <argument
+            android:name="photoUri"
+            app:argType="string"
+            android:defaultValue="noImg" />
+        <argument
+            android:name="photoUri1"
+            app:argType="string"
+            android:defaultValue="noImg" />
 
     </fragment>
 </navigation>
