--- a/app/src/main/res/layout/fragment_confirm_locker.xml
+++ b/app/src/main/res/layout/fragment_confirm_locker.xml
@@ -74,6 +74,7 @@
         android:src="@android:drawable/ic_menu_gallery"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/img1" />
 
