--- a/app/src/main/res/navigation/nav_client.xml
+++ b/app/src/main/res/navigation/nav_client.xml
@@ -11,14 +11,11 @@
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" >
         <action
-            android:id="@+id/action_homeFragment_to_mainActivity"
-            app:destination="@id/mainActivity"
-            app:popUpTo="@id/homeFragment"
-            app:popUpToInclusive="true"/>
+            android:id="@+id/action_homeFragment_to_signInFragment"
+            app:destination="@id/signInFragment" />
     </fragment>
-    <activity
-        android:id="@+id/mainActivity"
-        android:name="com.puc.pi3_es_2024_t24.main.MainActivity"
-        android:label="activity_main"
-        tools:layout="@layout/activity_main" />
+    <fragment
+        android:id="@+id/signInFragment"
+        android:name="com.puc.pi3_es_2024_t24.main.SignInFragment"
+        android:label="SignInFragment" />
 </navigation>
