--- a/app/src/main/res/layout/fragment_confirm_locker.xml
+++ b/app/src/main/res/layout/fragment_confirm_locker.xml
@@ -11,12 +11,13 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="60dp"
+        android:fontFamily="@font/manrope_bold"
         android:gravity="center"
-        android:text="Fotografia realizada com sucesso!"
-        android:textSize="30sp"
+        android:text="@string/fotografia_realizada_com_sucesso"
+        android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -25,8 +26,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:text="Cliente:"
-        android:textSize="30sp"
+        android:text="@string/cliente"
+        android:fontFamily="@font/manrope_semibold"
+        android:textSize="25sp"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,8 +39,9 @@
         android:id="@+id/etName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="etName"
-        android:textSize="25sp"
+        android:text="@string/nameuser"
+        android:textSize="20sp"
+        android:fontFamily="@font/manrope_semibold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,8 +51,9 @@
         android:id="@+id/etEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="etEmail"
-        android:textSize="25sp"
+        android:text="@string/emailuser"
+        android:fontFamily="@font/manrope_semibold"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -80,12 +85,13 @@
 
     <Button
         android:id="@+id/btnEnd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:text="Finalizar"
+        android:layout_width="214dp"
+        android:layout_height="63dp"
+        android:layout_marginTop="156dp"
+        android:text="@string/finalizar"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/img2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
