--- a/app/src/main/res/layout/dialog_close.xml
+++ b/app/src/main/res/layout/dialog_close.xml
@@ -4,7 +4,6 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="20dp"
-    app:cardBackgroundColor="@color/white"
     android:layout_marginHorizontal="20dp">
 
     <LinearLayout
@@ -24,14 +23,28 @@
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:layout_gravity="center">
+    <ImageView
+        android:id="@+id/ivPhoto1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:padding="10dp"
+        android:src="@drawable/camera_button" />
+    <ImageView
+        android:id="@+id/ivPhoto2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:padding="10dp"
+        android:src="@drawable/camera_button" />
 
-        <ImageView
-            android:id="@+id/ivPhoto"
-            android:layout_width="200dp"
-            android:layout_height="142dp"
-            android:layout_gravity="center"
-            android:padding="10dp"
-            android:src="@drawable/camera_button" />
+</LinearLayout>
+
 
         <TextView
             android:layout_gravity="center"
