--- a/app/src/main/res/layout/dialog_close_locker.xml
+++ b/app/src/main/res/layout/dialog_close_locker.xml
@@ -10,8 +10,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginLeft="50dp"
-        android:gravity="center">
+        android:gravity="center"
+        android:padding="20dp"
+        android:layout_gravity="center">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
