--- a/app/src/main/res/layout/fragment_menu_manager.xml
+++ b/app/src/main/res/layout/fragment_menu_manager.xml
@@ -22,7 +22,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/gerentchi"
+        android:id="@+id/txtManager"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
@@ -42,7 +42,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/gerentchi" />
+        app:layout_constraintTop_toBottomOf="@+id/txtManager" />
 
     <Button
         android:id="@+id/btnReleaseLocker"
