--- a/app/src/main/res/layout/dialog_release.xml
+++ b/app/src/main/res/layout/dialog_release.xml
@@ -51,6 +51,7 @@
             android:layout_gravity="center"
             android:id="@+id/tvUserName"
             android:textColor="@color/blue_gray"
+            android:textSize="20sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="name"/>
